<resources>
    <string name="app_name">CI matters</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="activity_main">Main Activity</string>
    <string name="activity_login">Login Activity</string>
</resources>
